--- a/css/style.css
+++ b/css/style.css
@@ -2343,8 +2343,15 @@ body > i.aminate {
 
 .panel__text {
   max-height: 400px;
+  padding-right: 10px;
   overflow-y: auto;
   margin: 40px 0;
+}
+
+@media screen and (max-width: 991px) {
+  .panel__text {
+    padding-right: 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -2753,6 +2760,12 @@ body > i.aminate {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .aside-menu {
+    height: 90px;
+  }
+}
+
 .aside-menu .slick-dots {
   list-style-type: none;
   padding: 0;
@@ -2777,6 +2790,14 @@ body > i.aminate {
     max-width: 320px;
     height: 100%;
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .aside-menu .slick-dots {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -2806,6 +2827,15 @@ body > i.aminate {
   .aside-menu .slick-dots li {
     width: 50%;
     margin: 0;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .aside-menu .slick-dots li {
+    margin-bottom: 10px;
+  }
+  .aside-menu .slick-dots li:nth-last-child(2) {
+    margin-bottom: 0;
   }
 }
 
@@ -2925,8 +2955,9 @@ body > i.aminate {
   }
 }
 
-@media screen and (max-height: 479px) {
+@media screen and (max-width: 479px) {
   .main {
+    height: calc(100vh - 100px);
     padding: 10px;
   }
 }
